// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch KILTs > V4 LIVE > V4 LIVE:  assetSwitchPool1 Finalization 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V4": {
          "interior": {
            "X1": [
              {
                "AccountId32": {
                  "id": "(hash)",
                  "network": null,
                },
              },
            ],
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchFinalized",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch KILTs > V4 LIVE > V4 LIVE: switch KILTs receiver chain: {"section":"foreignAssets","method":"Transferred"} 1`] = `[]`;

exports[`Switch KILTs > V4 LIVE > V4 LIVE: switch KILTs sender chain: {"section":"assetSwitchPool1","method":"LocalToRemoteSwitchExecuted"} 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V4": {
          "interior": {
            "X1": [
              {
                "AccountId32": {
                  "id": "(hash)",
                  "network": null,
                },
              },
            ],
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;
